<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/all_submissions"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/all_submissions" />
        <item
            android:id="@+id/my_submissions"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/my_submissions" />
    </group>

    <item android:title="System">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/logout" />
            <item
                android:id="@+id/delete_local_db"
                android:icon="@android:drawable/ic_delete"
                android:title="@string/delete_local_db" />
        </menu>
    </item>

</menu>
