<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".EditSubmissionActivity">
    <!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:name="com.google.android.gms.maps.SupportMapFragment"-->
        <!--android:id="@+id/edit_submission_position_map"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="2"/>-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >


        <TextView
            android:id="@+id/line_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:text="139"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#e74c3c"
            android:textSize="45sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_photo_again_btn"
            android:id="@+id/takePhotoAgainBtn"
            android:onClick=""
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:layout_width="@dimen/photo_thumbnail_width"
            android:layout_height="@dimen/photo_thumbnail_height"
            android:id="@+id/edit_new_revizor_photo"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/takePhotoAgainBtn"
            android:scaleType="fitStart"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/comment"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/comment_hint"
            android:layout_above="@+id/editSubmissionButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_btn"
            android:id="@+id/editSubmissionButton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</LinearLayout>